--- a/BarberLife-Project/package.json
+++ b/BarberLife-Project/package.json
@@ -1,2 +1,68 @@
-
-
+{
+  "main": "node_modules/expo/AppEntry.js",
+  "scripts": {
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web",
+    "eject": "expo eject",
+    "postinstall": "node_modules/.bin/rn-nodeify --install crypto --hack"
+  },
+  "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
+    "@react-navigation/bottom-tabs": "^5.6.1",
+    "@react-navigation/drawer": "^5.8.2",
+    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.1.0",
+    "expo": "^37.0.0",
+    "expo-image-picker": "~8.1.0",
+    "expo-web-browser": "~8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.1",
+    "http": "0.0.1-security",
+    "http-client": "^4.3.1",
+    "mysql": "^2.18.1",
+    "net": "^1.0.2",
+    "nodemon": "^2.0.4",
+    "querystring": "^0.2.0",
+    "react": "16.9.0",
+    "react-dom": "16.9.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-bcrypt": "^2.4.0",
+    "react-native-crypto": "^2.2.0",
+    "react-native-divider": "^1.0.3",
+    "react-native-elements": "^2.0.2",
+    "react-native-gesture-handler": "~1.6.0",
+    "react-native-hide-show-password-input": "^1.1.0",
+    "react-native-http": "0.0.3",
+    "react-native-randombytes": "^3.5.3",
+    "react-native-reanimated": "~1.7.0",
+    "react-native-safe-area-context": "0.7.3",
+    "react-native-screens": "~2.2.0",
+    "react-native-web": "^0.11.7",
+    "sequelize": "^5.21.12",
+    "tls": "0.0.1",
+    "url": "^0.11.0",
+    "util": "^0.12.3",
+    "watchman": "^1.0.0",
+    "web3": "^1.2.7"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.8.6",
+    "babel-plugin-rewrite-require": "^1.14.5",
+    "babel-preset-expo": "^8.1.0",
+    "rn-nodeify": "^10.2.0"
+  },
+  "private": true,
+  "react-native": {
+    "crypto": "react-native-crypto"
+  },
+  "browser": {
+    "crypto": "react-native-crypto"
+  }
+}
