Routes and folder refactoring

--- a/BarberLife-Project/package.json
+++ b/BarberLife-Project/package.json
@@ -9,10 +9,10 @@
     "postinstall": "node_modules/.bin/rn-nodeify --install crypto --hack"
   },
   "dependencies": {
-    "@react-native-community/masked-view": "0.1.6",
+    "@react-native-community/masked-view": "~0.1.6",
     "@react-navigation/bottom-tabs": "^5.6.1",
     "@react-navigation/drawer": "^5.8.2",
-    "@react-navigation/native": "^5.5.1",
+    "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.5.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
@@ -41,9 +41,10 @@
     "react-native-hide-show-password-input": "^1.1.0",
     "react-native-http": "0.0.3",
     "react-native-randombytes": "^3.5.3",
-    "react-native-reanimated": "~1.7.0",
+    "react-native-reanimated": "1.7.0",
+    "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "0.7.3",
-    "react-native-screens": "~2.2.0",
+    "react-native-screens": "^2.2.1",
     "react-native-web": "^0.11.7",
     "sequelize": "^5.21.12",
     "tls": "0.0.1",
